src/objects/MDLZ_KPIData__c.object
<CustomObject>
    <description>View key KPIs for the territory</description>
    <fields>
        <fullName>MDLZ_AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KPI Data</relationshipLabel>
        <relationshipName>KPI_Data</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>MDLZ_Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KPI Data (Account)</relationshipLabel>
        <relationshipName>KPI_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MDLZ_Mobility_Relevant__c</fullName>
        <label>Mobility Relevant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDLZ_KPIDate__c</fullName>
        <label>KPI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDLZ_KPIGroup__c</fullName>
        <label>KPI Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_KPITitle__c</fullName>
        <label>KPI Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_TerritoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Id</label>
        <referenceTo>ACCL__Org_Unit__c</referenceTo>
        <relationshipLabel>KPI Data</relationshipLabel>
        <relationshipName>KPI_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDLZ_UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KPI_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDLZ_Value1__c</fullName>
        <label>Value 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_Value2__c</fullName>
        <label>Value 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_Value3__c</fullName>
        <label>Value 3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>KPI Data</label>
    <nameField>
        <label>MDLZ_KPIData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>